# Launcher

./: .gitignore  README.md  bun.lockb  package.json  tailwind.config.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: builds.rs  download.rs
src/components/Core/: Frame.tsx  Particles.tsx  Sidebar.tsx
src/components/Global/: Toast.tsx
src/components/Home/: Banner.tsx  GithubChangelogs.tsx  Header.tsx
src/components/Settings/: Option.tsx  Sidebar.tsx
src/components/Settings/pages/: AccountPage.tsx  AppearancePage.tsx  DeveloperPage.tsx  GameOptionsPage.tsx  OptionsPage.tsx
src/pages/: Home.tsx  Library.tsx  Login.tsx  Settings.tsx
src/stellar/: Requests.ts  Storage.ts  index.ts
src/stellar/interfaces/: IAccount.ts  IMCPItem.ts  IMCPProfile.ts  IRoute.ts
src/zustand/: AuthStore.tsx  RoutingStore.tsx  ToastStore.tsx
