[package]
name = "stellar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stellar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
dirs = "5.0"
tokio = { version = "=1.32.0", features = ["full"] }
regex = "1"
flate2 = "1.0.25"
indicatif = "0.17.3"
futures-util = "0.3"
sysinfo = "0.29.10"
reqwest = { version = "0.12.22", features = ["stream", "blocking", "json"] }
winapi = { version = "0.3", features = ["tlhelp32", "shellapi", "winbase", "memoryapi", "handleapi"] }
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_System_Diagnostics_ToolHelp"] }
tauri-plugin-tauri = "2.0.0-beta.0"
tauri-plugin-process = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
winreg = "0.52"



